# class-resolver

./: .bumpversion.cfg  .cruft.json  .flake8  .gitignore  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  pyproject.toml  pyproject.toml.rej  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: cruft.yml  tests.yml
docs/: Makefile
docs/source/: conf.py  contrib.rst  index.rst  installation.rst  usage.rst
docs/source/contrib/: index.rst  numpy.rst  optuna.rst  sklearn.rst  torch.rst  torch_geometric.rst
src/class_resolver/: __init__.py  api.py  base.py  cli_demo_remove_before_merge.py  clit.py  docs.py  ex.py  func.py  metaresolver.py  utils.py  version.py
src/class_resolver/contrib/: __init__.py  numpy.py  optuna.py  sklearn.py  torch.py  torch_geometric.py
tests/: __init__.py  _private_extras.py  test_api.py  test_docs.py  test_function_resolver.py  test_metaresolver.py  test_utils.py  test_version.py
tests/test_contrib/: __init__.py  test_numpy.py  test_optuna.py  test_sklearn.py  test_torch.py  test_torch_geometric.py
